# BasicGL

./: CMakeLists.txt  basicgl.dox.in  doxy.config  generateDoc.cmake  kendo3d.dox.in
src/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  colorwidget.cpp  colorwidget.h  fxwidget.cpp  fxwidget.h  glwidget.cpp  glwidget.h  lightingwidget.cpp  lightingwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  texturewidget.cpp  texturewidget.h
